# BoyKissers-Repository

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: clang-checks.yml
inc/: input_or_output_check.h  math_func.h
memory/: MEMORY.md  user_profile.md
seminar-1/: CMakeLists.txt  Readme.md
seminar-1/inc/: function_parser.h  plus.h
seminar-1/src/: function_parser.cpp  main.cpp  plus.cpp
seminar-1/tests/: test_calculator.cpp
seminar-11/: CMakeLists.txt  Readme.md
seminar-11/inc/: inventory.hpp  item_factory.hpp
seminar-11/src/: inventory.cpp  item_factory.cpp  main.cpp
seminar-11/tests/: test_inventory.cpp
seminar-13/: CMakeLists.txt  Readme.md
seminar-13/.cache/clangd/index/: inventory.cpp.E27E94A5EA8B535B.idx  inventory.hpp.2159071098DEBD31.idx  item_factory.cpp.B7D695113141848D.idx  item_factory.hpp.CD193C91613D50F5.idx  main.cpp.9B006C6E1A86B064.idx  test_stat_block.cpp.C32EBF2076A1E718.idx
seminar-13/inc/: inventory.hpp  item_factory.hpp
seminar-13/src/: inventory.cpp  item_factory.cpp  main.cpp
seminar-13/tests/: test_stat_block.cpp
seminar-14/: CMakeLists.txt
seminar-14/.cache/clangd/index/: main.cpp.7971361E2F15CB93.idx  test_units.cpp.676049093C36A8A8.idx  unit.hpp.651D8C52E3080B3E.idx
seminar-14/inc/: unit.hpp
seminar-14/src/: main.cpp
seminar-14/tests/: test_units.cpp
seminar-3/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Readme.md
seminar-3/inc/: name_utils.h
seminar-3/src/: main.cpp  name_utils.cpp
seminar-3/tests/: test_name_utils.cpp
seminar-4/: .gitignore  CMakeLists.txt  Readme.md
seminar-4/inc/: kadane_utils.hpp  name_utils.h
seminar-4/src/: kadane_utils.cpp  main.cpp  name_utils.cpp
seminar-4/tests/: test_kadane_utils.cpp  test_name_utils.cpp
seminar-5/: CMakeLists.txt  Readme.md
seminar-5/inc/: xor_cipher_utils.hpp
seminar-5/src/: main.cpp  xor_cipher_utils.cpp
seminar-5/tests/: test_xor_cipher_utils.cpp
seminar-9/: CMakeLists.txt  Readme.md
seminar-9/inc/: book.hpp  catalog.hpp  safe_vector.hpp
seminar-9/src/: book.cpp  catalog.cpp  main.cpp
seminar-9/tests/: test_library.cpp
src/: input_or_output_check.c  main.c  main.cpp  math_func.c  math_func.cpp
